--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
 		"body-parser": "^1.19.0",
 		"btoa": "^1.2.1",
 		"cheerio": "^1.0.0-rc.3",
+		"chromedriver": "^84.0.1",
 		"classnames": "^2.2.6",
 		"concurrently": "^5.1.0",
 		"cors": "^2.8.5",
@@ -43,9 +44,11 @@
 		"redux": "^4.0.4",
 		"redux-thunk": "^2.3.0",
 		"request": "^2.88.2",
+		"selenium-webdriver": "^4.0.0-alpha.7",
 		"stripe": "^8.32.0",
 		"validator": "^12.2.0",
-		"wait.for": "^0.6.6"
+		"wait.for": "^0.6.6",
+		"wget": "0.0.1"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2"
